overflow issue solved

--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -6,6 +6,7 @@
 
 body {
     background-color: #e7e7e7;
+    overflow: hidden;
 }
 
 .main_area {
